website/versioned_docs/version-2.9.x/reference/subsystems/pex.mdx
---
title: pex
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

How Pants uses Pex to run Python subprocesses.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[pex]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `executable_search_paths`

<Option
  cli_repr={`--pex-executable-search-paths="[<binary-paths>, <binary-paths>, ...]"`}
  env_repr='PANTS_PEX_EXECUTABLE_SEARCH_PATHS'
  default_repr={`["<PATH>"]`}
>
The PATH value that will be used by the PEX subprocess and any subprocesses it spawns.

The special string &quot;&lt;PATH&gt;&quot; will expand to the contents of the PATH env var.

</Option>

### `verbosity`

<Option
  cli_repr={`--pex-verbosity=<int>`}
  env_repr="PANTS_PEX_VERBOSITY"
  default_repr={`0`}
>
  Set the verbosity level of PEX logging, from 0 (no logging) up to 9 (max
  logging).
</Option>

### `venv_use_symlinks`

<Option
  cli_repr={`--[no-]pex-venv-use-symlinks`}
  env_repr='PANTS_PEX_VENV_USE_SYMLINKS'
  default_repr={`False`}
>
When possible, use venvs whose site-packages directories are populated withsymlinks.

Enabling this can save space in the `--named-caches-dir` directory and lead to slightly faster execution times for Pants Python goals. Some distributions do not work with symlinked venvs though, so you may not be able to enable this optimization as a result.

</Option>

## Deprecated options

### `bootstrap_interpreter_names`

<Option
  cli_repr={`--pex-bootstrap-interpreter-names="[<bootstrap-python-names>, <bootstrap-python-names>, ...]"`}
  env_repr='PANTS_PEX_BOOTSTRAP_INTERPRETER_NAMES'
  default_repr={`[\n  "python",\n  "python3",\n  "python2"\n]`}
  removal_version='2.10.0.dev0'
  removal_hint={'Moved to `[python-bootstrap] names`.'}
>
The names of Python binaries to search for to bootstrap PEX files with.

This does not impact which Python interpreter is used to run your code, only what is used to run the PEX tool. See the `interpreter_search_paths` option in `[python]` to influence where interpreters are searched for.

</Option>

</span>

